[project]
name = "dlcp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ax-platform>=0.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbdev>=2.3.34",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["dlcp2025"]
